WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177520
Deferred image size change makes image-load-on-delay.html flaky.
https://bugs.webkit.org/show_bug.cgi?id=177520
Summary
Deferred image size change makes image-load-on-delay.html flaky.
alan
Reported
2017-09-26 19:20:48 PDT
Related to
bug 177446
Attachments
Patch
(6.43 KB, patch)
2017-09-27 16:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.43 KB, patch)
2017-09-27 16:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-26 19:21:28 PDT
<
rdar://problem/34674299
>
alan
Comment 2
2017-09-27 16:05:40 PDT
Created
attachment 322036
[details]
Patch
chris fleizach
Comment 3
2017-09-27 16:16:11 PDT
Comment on
attachment 322036
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322036&action=review
> Source/WebCore/accessibility/AXObjectCache.cpp:2803 > + m_deferredRecomputeIsIgnoredList.add(element);
is this a set or array? do we need to worry about duplicates being added?
> Source/WebCore/accessibility/AXObjectCache.cpp:2805 > + }
we could save some code if we did if (rendererNeedsDeferredUpdate(*renderer)) { m_deferredRecomputeIsIgnoredList.add(element); else recomputeIsIgnored(renderer);
> Source/WebCore/rendering/RenderImage.cpp:269 > + if (AXObjectCache* cache = document().existingAXObjectCache())
are you sure you want to lose the accessibilityEnabled() check?
alan
Comment 4
2017-09-27 16:23:21 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 322036
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=322036&action=review
> > > Source/WebCore/accessibility/AXObjectCache.cpp:2803 > > + m_deferredRecomputeIsIgnoredList.add(element); > > is this a set or array? do we need to worry about duplicates being added?
It's a set. Dupes are fine.
> > > Source/WebCore/accessibility/AXObjectCache.cpp:2805 > > + } > > we could save some code if we did > > if (rendererNeedsDeferredUpdate(*renderer)) { > m_deferredRecomputeIsIgnoredList.add(element); > else > recomputeIsIgnored(renderer);
> I don't mind doing that but in WebCore we prefer early returns (unless it has changed).
> > Source/WebCore/rendering/RenderImage.cpp:269 > > + if (AXObjectCache* cache = document().existingAXObjectCache()) > > are you sure you want to lose the accessibilityEnabled() check?
Not sure how much that helps and if you look at all the call sites, they don't really check for that (not even the hot ones).
alan
Comment 5
2017-09-27 16:25:47 PDT
Created
attachment 322039
[details]
Patch
WebKit Commit Bot
Comment 6
2017-09-27 18:38:21 PDT
Comment on
attachment 322039
[details]
Patch Clearing flags on attachment: 322039 Committed
r222594
: <
http://trac.webkit.org/changeset/222594
>
WebKit Commit Bot
Comment 7
2017-09-27 18:38:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug