Deferred image size change makes image-load-on-delay.html flaky. https://bugs.webkit.org/show_bug.cgi?id=177520 <rdar://problem/34674299>

Reviewed by Dean Jackson.

Source/WebCore:

Only defer recomputeIsIgnored when the image change actually triggers layout.

* accessibility/AXObjectCache.cpp:
(WebCore::rendererNeedsDeferredUpdate):
(WebCore::AXObjectCache::deferRecomputeIsIgnoredIfNeeded):
(WebCore::AXObjectCache::deferTextChangedIfNeeded):
* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::deferRecomputeIsIgnoredIfNeeded):
* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageChanged):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/193879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222594 268f45cc-cd09-0410-ab3c-d52691b4dbfc